# fetchez

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  environment.yaml  pyproject.toml
.github/workflows/: publish.yaml  sphinx.yaml  sphinx.yml  typecheck.yml
docs/: _config.yaml  index.md
docs/source/: conf.py  index.md  index.rst
docs/source/api/: api.md
docs/source/contribute/: modules.md  user_hooks.md  user_plugins.md
docs/source/modules/: index.md
docs/source/user_guide/: cli_usage.md  hooks_and_presets.md  installation.md  plugins_and_extensions.md  recipes.md
docs/windows/: install_fetchez.bat
examples/: README.md  README_class2xyz.md  class2xyz.py  class2xyz_examples.sh  hook_reproject.py  process_bing.py  visualize_tides.py
src/fetchez/: __init__.py  api.py  cli.py  config.py  core.py  fred.py  pipeline.py  presets.py  project.py  recipe.py  registry.py  spatial.py  utils.py
src/fetchez/hooks/: __init__.py  basic.py  file_ops.py  registry.py  utils.py
src/fetchez/hooks/builtins/pipeline/: fn_filter.py
src/fetchez/modules/: arcticdem.py  bing.py  bluetopo.py  buoys.py  cdse.py  cusp.py  dav.py  dtu.py  earthaccess.py  ehydro.py  fabdem.py  gba.py  gebco.py  gedtm30.py  globathy.py  hydrolakes.py  hydronos.py  ipinfo.py  margrav.py  maxar.py  mgds.py  multibeam.py  nasadem.py  ngs.py  nominatim.py  nswtb.py  path.py  proj.py  sentinel2.py  srtmplus.py  stac.py  synbath.py  tides.py  tiger.py  tnm.py  usiei.py  vdatum.py  vgg.py  wadnr.py  waterservices.py
src/geofetch/: cli.py  core.py  registry.py  spatial.py  utils.py
src/geofetch/modules/: chs.py  cptcity.py  etopo.py
