[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fetchez"
version = "0.4.2"
description = "Geo-Spatial Data Fetching"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    {name = "Matthew Love", email = "matthew.love@colorado.edu"},
    {name = "Christopher Amante", email = "christopher.amante@colorado.edu"},
    {name = "Elliot Lim", email = "elliot.lim@colorado.edu"},
    {name = "Michael MacFerrin", email = "michael.macferrin@colorado.edu"},
]
maintainers = [
    {name = "Matthew Love", email = "matthew.love@colorado.edu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "requests[security]",
    "lxml",
    "tqdm",
    "shapely",
    'pyyaml',
]

keywords = ["Geospatial"]

[project.optional-dependencies]
aws = ["boto3"]
vector = ["pyshp", "pyproj"]
test = ['pytest']

full = ["fetchez[aws,vector]"]

[dependency-groups]
dev = [
  "mypy",
  "types-requests>=2.31.0.6",
  "types-tqdm>=4.67.0.20241221",
]

[project.scripts]
# CLI Entry Points
fetchez = "fetchez.cli:fetchez_cli"

[project.urls]
Homepage = "https://github.com/ciresdem/fetchez"
Issues = "https://github.com/ciresdem/fetchez/issues"

# --- Setuptools Configuration for 'src' layout ---

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages inside the 'src' folder
include = ["fetchez*"]  # Include the package named 'fetchez'
exclude = ["tests*", "docs*", "scripts*", "examples*"]
namespaces = false 

[tool.setuptools.package-data]
# Keys are package names. Values are globs relative to that package root.
# Example: src/fetchez/data/*.geojson -> "data/*.geojson"
fetchez = ["data/*.geojson"]

[tool.mypy]
mypy_path = "src"
packages = ["fetchez"]
python_version = "3.12"
# strict = true

[[tool.mypy.overrides]]
module = [
    "shapely.*",
    "lxml.*",
    "boto3",
    "botocore.*",
    "mercantile",
    "osgeo",
    "pyproj",
    "sentinelsat",
    "shapefile",
    "yaml",
]
ignore_missing_imports = true
