[build-system]
requires = ["hatchling>=1.5.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fetchez"
description = "Geo-Spatial Data Fetching"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dynamic = ["version"]
authors = [
    {name = "Matthew Love", email = "matthew.love@colorado.edu"},
    {name = "Christopher Amante", email = "christopher.amante@colorado.edu"},
    {name = "Elliot Lim", email = "elliot.lim@colorado.edu"},
    {name = "Michael MacFerrin", email = "michael.macferrin@colorado.edu"},
]
maintainers = [
    {name = "Matthew Love", email = "matthew.love@colorado.edu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "requests[security]",
    "lxml",
    "tqdm",
    "shapely",
    'pyyaml',
]

keywords = ["Geospatial"]

[project.optional-dependencies]
aws = ["boto3"]
vector = ["pyshp", "pyproj"]
bing = ["mercantile"]
earthdata = ["earthaccess>=0.9.0"]
stac = ["pystac", "pystac_client"]

full = ["fetchez[aws,bing,vector,earthdata,stac]"]

[dependency-groups]
dev = [
  "pre-commit",
  "mypy",
  "types-requests>=2.31.0.6",
  "types-tqdm>=4.67.0.20241221",
]
test = [
  "pytest",
  "pytest-cov",
]

[project.scripts]
# CLI Entry Points
fetchez = "fetchez.cli:fetchez_cli"

[project.urls]
Homepage = "https://github.com/ciresdem/fetchez"
Issues = "https://github.com/ciresdem/fetchez/issues"


# --- Build configuration ---

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.version]
path = "src/fetchez/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fetchez"]

[tool.hatch.build.targets.sdist]
include = [
  "src/fetchez",
  "tests",
  "CHANGELOG.md",
  "CITATION.cff",
  "CONTRIBUTING.md",
  "AUTHORS.md",
]
exclude = [
  ".github",
  "examples",
  "scripts",
]


# --- Devtools configuration ---

[tool.mypy]
mypy_path = "src"
packages = ["fetchez"]
python_version = "3.12"
# strict = true

[[tool.mypy.overrides]]
module = [
    "shapely.*",
    "lxml.*",
    "boto3",
    "botocore.*",
    "mercantile",
    "osgeo",
    "pyproj",
    "sentinelsat",
    "shapefile",
    "yaml",
    "earthaccess.*",
    "pystac",
    "pystac_client",
]
ignore_missing_imports = true
